<resources>
    <string name="app_name">Assignment_1</string>
    <string name="sender_details">SENDER\nDETAILS</string>
    <string name="full_name">Full Name</string>
    <string name="receiver_details">Receiver\nDetails</string>
    <string name="review_information">Review Information</string>
    <string name="go_back">Go Back</string>
    <string name="review_name">Name</string>
    <string name="review_country">Country</string>
    <string name="review_address">Address</string>
    <string name="review_contact_info">Contact Info</string>
    <string name="email">Email</string>
    <string name="contact_information">Contact Information</string>
    <string name="country">Country</string>
    <string name="address">ADDRESS</string>
    <string name="next">Next</string>
    <string name="des_arrow_down">Arrow Down</string>
</resources>