<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/tv_receiver_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/receiver_details"
        android:textColor="@android:color/white"
        android:textSize="18pt"
        android:background="@color/red"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.15"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/backgroundColor"
        app:layout_constraintTop_toBottomOf="@id/tv_receiver_details"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:autofillHints="Email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:autofillHints="Full Name"
            android:hint="@string/full_name"
            android:inputType="text"
            android:padding="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:autofillHints="Phone"
            android:hint="@string/contact_information"
            android:inputType="phone|number"
            android:padding="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_country"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:autofillHints="Country"
            android:hint="@string/country"
            android:inputType="textAutoCorrect"
            android:padding="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_address"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:autofillHints="Address"
            android:hint="@string/address"
            android:inputType="text"
            android:padding="16dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:padding="16dp"
            android:background="@drawable/button_background"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
