<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/tv_receiver_information"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/review_information"
        android:textColor="@android:color/white"
        android:textSize="18pt"
        android:background="@color/red"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.15"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:id="@+id/ll_row1"
        app:layout_constraintTop_toBottomOf="@id/tv_receiver_information"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/review_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_country_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/review_country"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_address_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/review_address"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_contact_info_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/review_contact_info"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="8dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/sender_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/ll_row1"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_name_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/full_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_country_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/country"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_address_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_contact_info_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contact_information"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="8dp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/down_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/des_arrow_down"
        android:src="@drawable/down_arrow_image"
        app:layout_constraintTop_toBottomOf="@id/sender_info_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <LinearLayout
        android:id="@+id/receiver_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="750dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/down_arrow"
        app:layout_constraintBottom_toTopOf="@id/floatingActionButton"
        >

        <TextView
            android:id="@+id/tv_name_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/full_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_country_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/country"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_address_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/tv_contact_info_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contact_information"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:padding="8dp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:contentDescription="@string/go_back"
        android:focusable="true"
        app:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />
</androidx.constraintlayout.widget.ConstraintLayout>
